# idlebench

./: .gitignore  README.md  RESULTS.md  go.mod  main.go  run-servers.sh  schema.sql
postgres/: postgres.go
postgres/golang/: postgres.go
postgres/nodejs/: app.js  package-lock.json  package.json
postgres/python-asyncio/: Dockerfile  main.py
redis/: redis.go
redis/c-hiredis/: Dockerfile  main.c
redis/crystal/: Dockerfile  shard.yml
redis/crystal/src/: crystal.cr
redis/golang/: Dockerfile  go.mod  main.go  redis.go
redis/nodejs/: Dockerfile  app.js  package-lock.json  package.json
redis/python-asyncio/: Dockerfile  main.py  requirements.txt
redis/rust-async-std/: Cargo.toml  Dockerfile
redis/rust-async-std/src/: main.rs
