[package]
name = "rust-async-std"
version = "0.1.0"
authors = ["Jens Reidel <jens@troet.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = { version = "1.6.3", features = ["attributes"] }
redis = { version = "0.17.0", features = ["aio", "async-std-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
